<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.kks.trainingapp.custom_control.MyanEditText
            android:id="@+id/et_user_name"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:hint="@string/username"
            android:background="@drawable/bg_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.kks.trainingapp.custom_control.MyanEditText
            android:id="@+id/et_password"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:hint="@string/password"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/eye_icon"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.kks.trainingapp.custom_control.MyanButton
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:background="@drawable/bg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>