<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_placeholder" />

            <com.kks.trainingapp.custom_control.MyanBoldTextView
                android:id="@+id/mt_movie_title"
                android:text="Title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_size_ex_large"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_movie_poster"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_normal"/>
        </RelativeLayout>

        <com.kks.trainingapp.custom_control.MyanBoldTextView
            android:id="@+id/mt_genres"
            android:gravity="center"
            android:textStyle="italic"
            android:textSize="@dimen/txt_size_large"
            android:layout_margin="@dimen/margin_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.kks.trainingapp.custom_control.MyanTextView
            android:id="@+id/mt_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"/>

        <LinearLayout
            android:id="@+id/layoutTagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:orientation="horizontal">
            <TextView
                android:text="@string/tag_line"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"/>
            <com.kks.trainingapp.custom_control.MyanTextView
                android:id="@+id/mt_tag_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:orientation="horizontal">
            <TextView
                android:text="@string/movie_status"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"/>
            <com.kks.trainingapp.custom_control.MyanTextView
                android:id="@+id/mt_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:orientation="horizontal">
            <TextView
                android:text="@string/release_date"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"/>
            <com.kks.trainingapp.custom_control.MyanTextView
                android:id="@+id/mt_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:orientation="horizontal">
            <TextView
                android:text="@string/produced_by"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"/>
            <com.kks.trainingapp.custom_control.MyanTextView
                android:id="@+id/mt_production"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>



    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>